--- a/render.yaml
+++ b/render.yaml
@@ -28,7 +28,7 @@ services:
   - type: web
     name: ballerine-workflow-service
     env: docker
-    image: ghcr.io/ballerine-io/workflows-service:latest
+    image: ghcr.io/ballerine-io/workflows-service:sha-ac74924
     plan: starter
     region: ohio
     startCommand: |
