--- a/render.yaml
+++ b/render.yaml
@@ -28,7 +28,8 @@ services:
   - type: web
     name: ballerine-workflow-service
     env: docker
-    image: ghcr.io/ballerine-io/workflows-service:sha-ac74924
+    image:
+      url: ghcr.io/ballerine-io/workflows-service:latest
     plan: starter
     region: ohio
     startCommand: |
