--- a/render.yaml
+++ b/render.yaml
@@ -32,7 +32,7 @@ services:
       url: ghcr.io/ballerine-io/workflows-service:latest
     plan: starter
     region: ohio
-    startCommand: "npm run db:init && npm run seed && dumb-init npm run prod"
+    startCommand: "dumb-init npm run prod"
     envVars:
       - key: PORT
         value: 3000
