--- a/render.yaml
+++ b/render.yaml
@@ -28,8 +28,8 @@ services:
   - type: web
     name: ballerine-workflow-service
     runtime: docker
-    image:
-      url: ghcr.io/ballerine-io/workflows-service:latest
+    dockerfilePath: ./Dockerfile.workflow-service
+    dockerContext: .
     plan: starter
     region: ohio
     envVars:
