--- a/render.yaml
+++ b/render.yaml
@@ -41,7 +41,7 @@ services:
         sync: false
       - key: DB_URL
         fromDatabase:
-          name: ballerine-postgres
+          name: postgres-plv8:15.3-3.1.7
           property: connectionString
       - key: API_KEY
         sync: false
@@ -51,15 +51,15 @@ services:
         sync: false
       - key: DB_PORT
         fromDatabase:
-          name: ballerine-postgres
+          name: postgres-plv8:15.3-3.1.7
           property: port
       - key: DB_USER
         fromDatabase:
-          name: ballerine-postgres
+          name: postgres-plv8:15.3-3.1.7
           property: user
       - key: DB_PASSWORD
         fromDatabase:
-          name: ballerine-postgres
+          name: postgres-plv8:15.3-3.1.7
           property: password
       - key: SESSION_SECRET
         generateValue: true
