--- a/render.yaml
+++ b/render.yaml
@@ -41,7 +41,7 @@ services:
         sync: false
       - key: DB_URL
         fromDatabase:
-          name: postgres-plv8:15.3-3.1.7
+          name: ballerine-postgres-plv8
           property: connectionString
       - key: API_KEY
         sync: false
@@ -51,15 +51,15 @@ services:
         sync: false
       - key: DB_PORT
         fromDatabase:
-          name: postgres-plv8:15.3-3.1.7
+          name: ballerine-postgres-plv8
           property: port
       - key: DB_USER
         fromDatabase:
-          name: postgres-plv8:15.3-3.1.7
+          name: ballerine-postgres-plv8
           property: user
       - key: DB_PASSWORD
         fromDatabase:
-          name: postgres-plv8:15.3-3.1.7
+          name: ballerine-postgres-plv8
           property: password
       - key: SESSION_SECRET
         generateValue: true
@@ -100,6 +100,25 @@ services:
     envVars:
       - key: PORT
         value: 80
+
+  - type: web
+    name: ballerine-postgres-plv8
+    runtime: image
+    image:
+      url: docker.io/sibedge/postgres-plv8:15.3-3.1.7
+    plan: starter
+    envVars:
+    - key: DB_PASSWORD
+      sync: false
+    - key: DB_USER
+      sync: false
+    - key: DB_PORT
+      sync: false
+    - key: POSTGRES_PASSWORD
+      sync: false
+    - key: POSTGRES_USER
+      sync: false
+    region: ohio
 
 databases:
   - name: ballerine-postgres
