--- a/render.yaml
+++ b/render.yaml
@@ -40,27 +40,19 @@ services:
       - key: SESSION_EXPIRATION_IN_MINUTES
         sync: false
       - key: DB_URL
-        fromDatabase:
-          name: ballerine-postgres
-          property: connectionString
+        value: postgres://${DB_USER}:${DB_PASSWORD}@ballerine-postgres-plv8:${DB_PORT}
+      - key: DB_USER
+        value: admin
+      - key: DB_PASSWORD
+        value: admin
+      - key: DB_PORT
+        value: 5432
       - key: API_KEY
         sync: false
       - key: NODE_ENV
         sync: false
       - key: COMPOSE_PROJECT_NAME
         sync: false
-      - key: DB_PORT
-        fromDatabase:
-          name: ballerine-postgres
-          property: port
-      - key: DB_USER
-        fromDatabase:
-          name: ballerine-postgres
-          property: user
-      - key: DB_PASSWORD
-        fromDatabase:
-          name: ballerine-postgres
-          property: password
       - key: SESSION_SECRET
         generateValue: true
       - key: BACKOFFICE_CORS_ORIGIN
@@ -101,28 +93,24 @@ services:
       - key: PORT
         value: 80
 
-  # - type: web
-  #   name: ballerine-postgres-plv8
-  #   runtime: image
-  #   image:
-  #     url: docker.io/sibedge/postgres-plv8:15.3-3.1.7
-  #   plan: starter
-  #   envVars:
-  #   - key: DB_PASSWORD
-  #     value: admin
-  #   - key: DB_USER
-  #     value: admin
-  #   - key: DB_PORT
-  #     value: 5432
-  #   - key: POSTGRES_PASSWORD
-  #     value: admin
-  #   - key: POSTGRES_USER
-  #     value: admin
-  #   region: ohio
+  - type: web
+    name: ballerine-postgres-plv8
+    runtime: image
+    image:
+      url: docker.io/sibedge/postgres-plv8:15.3-3.1.7
+    plan: starter
+    envVars:
+    - key: PORT
+      value: 5432
+    - key: POSTGRES_PASSWORD
+      value: admin
+    - key: POSTGRES_USER
+      value: admin
+    region: ohio
 
 databases:
   - name: ballerine-postgres
-    databaseName: ledger
+    databaseName: ballerine
     plan: standard
     postgresMajorVersion: "15"
     user: admin
