fix: update service db name

--- a/render.yaml
+++ b/render.yaml
@@ -40,7 +40,7 @@ services:
       - key: SESSION_EXPIRATION_IN_MINUTES
         sync: false
       - key: DB_URL
-        value: postgres://${DB_USER}:${DB_PASSWORD}@ballerine-postgres-plv8:${DB_PORT}
+        value: postgres://admin:$admin@postgres:$5432
       - key: DB_USER
         value: admin
       - key: DB_PASSWORD
@@ -94,7 +94,7 @@ services:
         value: 80
 
   - type: web
-    name: ballerine-postgres-plv8
+    name: postgres
     runtime: image
     image:
       url: docker.io/sibedge/postgres-plv8:15.3-3.1.7
