--- a/Dockerfile.workflow-service
+++ b/Dockerfile.workflow-service
@@ -5,4 +5,5 @@ RUN apt-get update && apt-get install -y dumb-init && rm -rf /var/lib/apt/lists/
 
 # Set the entry point to run your desired commands
 ENTRYPOINT ["/bin/sh", "-c"]
-CMD ["npm run db:clean && npm run db:init && npm run seed && dumb-init npm run prod"]
+# CMD ["npm run db:init && npm run seed && dumb-init npm run prod"]
+CMD ["npm run db:reset && dumb-init npm run prod"]
