--- a/render.yaml
+++ b/render.yaml
@@ -70,9 +70,9 @@ services:
       - key: PORT
         value: 3000
       - key: BCRYPT_SALT
-        sync: false
+        value: 10
       - key: SESSION_EXPIRATION_IN_MINUTES
-        sync: false
+        value: 60
       - key: DB_URL
         value: postgres://admin:admin@ballerine-postgres:5432/postgres
       - key: DB_USER
@@ -82,13 +82,13 @@ services:
       - key: DB_PORT
         value: 5432
       - key: API_KEY
-        sync: false
+        value: secret
       - key: NODE_ENV
-        sync: false
+        value: production
       - key: COMPOSE_PROJECT_NAME
-        sync: false
+        value: ballerine-x
       - key: SESSION_SECRET
-        generateValue: true
+        value: secret
       - key: BACKOFFICE_CORS_ORIGIN
         value: https://ballerine-back-office.onrender.com
       - key: WORKFLOW_DASHBOARD_CORS_ORIGIN
@@ -110,11 +110,11 @@ services:
       - key: ENVIRONMENT_NAME
         value: production
       - key: HASHING_KEY_SECRET
-        sync: false
+        value: secret
       - key: HASHING_KEY_SECRET_BASE64
-        sync: false
+        value: JDJiJDEwJEdSUHhqQXQ2aGtYcGQxQ2NNcmxvZnU=
       - key: NOTION_API_KEY
-        sync: false
+        value: secret
       - key: DOMAIN_NAME
         value: https://ballerine-workflow-service.onrender.com
 
