Update env variables more more

--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,7 @@ services:
       - key: PORT
         value: 80
       - key: VITE_API_URL
-        value: https://ballerine-workflow-service.onrender.com/api/v1/internal
+        value: https://ballerine-workflow-service.onrender.com/api/v1/
       - key: VITE_API_KEY
         value: secret
       - key: VITE_AUTH_ENABLED
@@ -37,13 +37,11 @@ services:
       - key: PORT
         value: 80
       - key: VITE_API_URL
-        value: https://ballerine-workflow-service.onrender.com/api/v1/internal
+        value: https://ballerine-workflow-service.onrender.com/api/v1/
       - key: VITE_API_KEY
         value: secret
-      # - key: VITE_ENVIRONMENT_NAME
-      #   value: development
       - key: VITE_KYB_API_URL
-        value: https://ballerine-workflow-service.onrender.com/api/v1/internal
+        value: https://ballerine-workflow-service.onrender.com/api/v1/
       - key: VITE_KYB_DEFINITION_ID
         value: kyb_parent_kyc_session_example
       - key: VITE_AUTH_ENABLED
@@ -65,17 +63,7 @@ services:
       - key: PORT
         value: 80
       - key: VITE_API_URL
-        value: https://ballerine-workflow-service.onrender.com/api/v1/internal
-      - key: VITE_API_KEY
-        value: secret
-      # - key: VITE_ENVIRONMENT_NAME
-      #   value: development
-      - key: VITE_KYB_API_URL
-        value: https://ballerine-workflow-service.onrender.com/api/v1/internal
-      - key: VITE_IMAGE_LOGO_URL
-        value: https://raw.githubusercontent.com/vault-pay/logo/a53fe08f64054061fe5b7ad9e61a05b7d4416ca0/vaultpay-new-large-logo.png
-      - key: VITE_KYB_DEFINITION_ID
-        value: kyb_parent_kyc_session_example
+        value: https://ballerine-workflow-service.onrender.com/api/v1/
       - key: VITE_AUTH_ENABLED
         sync: false
       - key: VITE_MOCK_SERVER
@@ -110,7 +98,7 @@ services:
       - key: KYB_EXAMPLE_CORS_ORIGIN
         value: http://ballerine-workflow-service.onrender.com:5201
       - key: APP_API_URL
-        value: https://alon.ballerine.dev
+        value: http://ballerine-workflow-service.onrender.com
       - key: BCRYPT_SALT
         value: 10
       - key: SESSION_EXPIRATION_IN_MINUTES
@@ -136,7 +124,7 @@ services:
       - key: EMAIL_API_URL
         value: https://api.sendgrid.com/v3/mail/send
       - key: UNIFIED_API_URL
-        value: https://unified-api-test.eu.ballerine.app
+        value: http://ballerine-workflow-service.onrender.com
       - key: ENVIRONMENT_NAME
         value: development
       - key: HASHING_KEY_SECRET
