manually change back-office url

--- a/render.yaml
+++ b/render.yaml
@@ -21,7 +21,7 @@ services:
       - key: VITE_FETCH_SIGNED_URL
         sync: false
       - key: VITE_ENVIRONMENT_NAME
-        value: production
+        value: development
       - key: VITE_KYB_DEFINITION_ID
         value: kyb_parent_kyc_session_example
 
@@ -51,7 +51,7 @@ services:
       - key: VITE_FETCH_SIGNED_URL
         sync: false
       - key: VITE_ENVIRONMENT_NAME
-        value: production
+        value: development
 
   - type: web
     name: ballerine-workflows-dashboard
@@ -73,7 +73,7 @@ services:
       - key: VITE_FETCH_SIGNED_URL
         sync: false
       - key: VITE_ENVIRONMENT_NAME
-        value: production
+        value: development
 
   - type: web
     name: ballerine-workflow-service
@@ -114,7 +114,7 @@ services:
       - key: API_KEY
         value: secret
       - key: NODE_ENV
-        value: production
+        value: development
       - key: COMPOSE_PROJECT_NAME
         value: ballerine-x
       - key: SESSION_SECRET
@@ -126,7 +126,7 @@ services:
       - key: UNIFIED_API_URL
         value: http://ballerine-workflow-service.onrender.com
       - key: ENVIRONMENT_NAME
-        value: production
+        value: development
       - key: HASHING_KEY_SECRET
         value: secret
       - key: HASHING_KEY_SECRET_BASE64
