--- a/Dockerfile.workflow-service
+++ b/Dockerfile.workflow-service
@@ -3,6 +3,9 @@ FROM ghcr.io/ballerine-io/workflows-service:latest
 # Install dumb-init if it's not already in the base image
 RUN apt-get update && apt-get install -y dumb-init && rm -rf /var/lib/apt/lists/*
 
+# Remove any existing .env file
+RUN rm -f .env
+
 # Set the entry point to run your desired commands
 ENTRYPOINT ["/bin/sh", "-c"]
 # CMD ["npm run db:init && npm run seed && dumb-init npm run prod"]
