--- a/apps/backoffice-v2/.env.example
+++ b/apps/backoffice-v2/.env.example
@@ -1,4 +1,4 @@
-VITE_API_URL=https://ballerine-workflow-service.onrender.com/api/v1
+VITE_API_URL=https://ballerine-workflow-service.onrender.com/api/v1/internal
 VITE_API_KEY=secret
 VITE_AUTH_ENABLED=true
 VITE_MOCK_SERVER=false
