fix: all  our change

--- a/deploy/.env
+++ b/deploy/.env
@@ -18,3 +18,4 @@ WEBSOCKET_SVC_PORT=3500
 KYB_APP_PORT=5201
 DOMAIN_NAME=""
 HASHING_KEY_SECRET="secret"
+HASHING_KEY_SECRET_BASE64=JDJiJDEwJEdSUHhqQXQ2aGtYcGQxQ2NNcmxvZnU=
