--- a/apps/workflows-dashboard/.env.example
+++ b/apps/workflows-dashboard/.env.example
@@ -1,4 +1,4 @@
-VITE_API_URL=http://localhost:3000/api/v1/
+VITE_API_URL=https://ballerine-workflow-service.onrender.com/api/v1/
 MODE=development
 VITE_IMAGE_LOGO_URL=
 VITE_ENVIRONMENT_NAME=local
