--- a/deploy/docker-compose-build.yml
+++ b/deploy/docker-compose-build.yml
@@ -60,7 +60,7 @@ services:
       UNIFIED_API_TOKEN: ''
       UNIFIED_API_SHARED_SECRET: ''
       ENVIRONMENT_NAME: 'development'
-      HASHING_KEY_SECRET: ${HASHING_KEY_SECRET}
+      # HASHING_KEY_SECRET: ${HASHING_KEY_SECRET}
       HASHING_KEY_SECRET_BASE64: ${HASHING_KEY_SECRET_BASE64}
       NOTION_API_KEY: ${NOTION_API_KEY}
     depends_on:
