--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "author": "Ballerine <dev@ballerine.com>",
   "description": "Open-Source Rules & Workflow Engine for User Identity and Risk Decisioning",
   "private": false,
+  "packageManager": "pnpm@9.9.0",
   "version": "0.4.0",
   "main": "index.js",
   "engines": {
