--- a/Dockerfile.workflow-service
+++ b/Dockerfile.workflow-service
@@ -25,7 +25,7 @@ RUN echo "PORT=3000" >> .env && \
     echo "API_KEY=secret" >> .env && \
     echo "NODE_ENV=development" >> .env && \
     echo "COMPOSE_PROJECT_NAME=ballerine-x" >> .env && \
-    echo "SESSION_SECRET=secret" >> .env && \
+    echo "SESSION_SECRET=iGdnj4A0YOhj8dHJK7IWSvQKEZsG7P70FFehuddhFPjtg/bSkzFejYILk4Xue6Ilx9y3IAwzR8pV1gb4" >> .env && \
     echo "EMAIL_API_TOKEN=''" >> .env && \
     echo "EMAIL_API_URL=https://api.sendgrid.com/v3/mail/send" >> .env && \
     echo "UNIFIED_API_URL=http://ballerine-workflow-service.onrender.com" >> .env && \
