--- a/Dockerfile.workflow-service
+++ b/Dockerfile.workflow-service
@@ -29,7 +29,7 @@ RUN echo "PORT=3000" >> .env && \
     echo "EMAIL_API_TOKEN=''" >> .env && \
     echo "EMAIL_API_URL=https://api.sendgrid.com/v3/mail/send" >> .env && \
     echo "UNIFIED_API_URL=http://ballerine-workflow-service.onrender.com" >> .env && \
-    echo "ENVIRONMENT_NAME=development" >> .env && \
+    echo "ENVIRONMENT_NAME=local" >> .env && \
     echo "HASHING_KEY_SECRET=secret" >> .env && \
     echo "HASHING_KEY_SECRET_BASE64=JDJiJDEwJEdSUHhqQXQ2aGtYcGQxQ2NNcmxvZnU=" >> .env && \
     echo "NOTION_API_KEY=secret" >> .env && \
