--- a/render.yaml
+++ b/render.yaml
@@ -78,8 +78,11 @@ services:
   - type: web
     name: ballerine-workflow-service
     runtime: docker
-    dockerfilePath: ./Dockerfile.workflow-service
-    dockerContext: .
+    dockerfilePath: ./services/workflow-service/Dockerfile
+    dockerContext: ./services/workflow-service/
+    buildCommand: docker build
+    # dockerfilePath: ./Dockerfile.workflow-service
+    # dockerContext: .
     plan: starter
     region: ohio
     envVars:
